# 2D_Heat

./: .gitignore  AGENTS.md  CARTESIAN_TOPOLOGY_IMPLEMENTATION_SUMMARY.md  CG_SOLVER_FINAL_REPORT.md  CG_SOLVER_IMPLEMENTATION_SUMMARY.md  CMAKE_TARGETS.md  CMakeLists.txt  CONTRIBUTING.md  Consts.h  ExactImp.txt  Exam  GHOST_CELL_EXCHANGE_IMPLEMENTATION_SUMMARY.md  GOOGLETEST_SETUP_SUMMARY.md  Heat  Heat.cpp  HeatUtils.cpp  HeatUtils.h  Interfaces.cpp  Interfaces.h  JACOBI_SOLVER_REFACTORING_SUMMARY.md  LEGACY_COMPATIBILITY_SUMMARY.md  MESH2D_IMPLEMENTATION_SUMMARY.md  Makefile  Param.in  Proc-0.txt  Proc-1.txt  Proc-2.txt  Proc-3.txt  Proc-4.txt  Proc-5.txt  Proc-6.txt  Proc-7.txt  Proc-8.txt  QUICKSTART.md  README.md  README_CMAKE.md  SolImp.txt  TIME_IO_IMPLEMENTATION_SUMMARY.md  test_cg_compile  test_cg_compile.cpp  (+2 more)
.claude/plan/: refactoring_plan.md
.github/workflows/: QUICK_START.md  README.md  benchmark.yml  ci.yml  codeql.yml
cmake/: config.hpp.in
docs/: MPIContext_README.md  MPI_PROFILING_GUIDE.md  MPI_PROFILING_SUMMARY.md  api.md  architecture.md  examples.md  migration_guide.md  performance_guide.md
docs/superpowers/plans/: 2026-04-06-visualization.md
docs/superpowers/specs/: 2026-04-06-visualization-design.md
examples/: domain_decomposition_example.cpp  jacobi_solver_example.cpp  profiler_example.cpp  sor_solver_demo.cpp
examples/mesh/: coordinate_system_example.cpp
examples/solvers/: cg_solver_example.cpp
legacy/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  heat_utils_compat.cpp  heat_utils_compat.hpp  interfaces_compat.cpp  interfaces_compat.hpp  legacy_main.cpp  test_legacy_compat.cpp
scripts/: build_mpi_context_test.sh  profile_mpi.sh  run_all_tests.sh  run_mpi_context_test.sh  validate-ci.sh  verify_cmake.sh
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/scheme/: crank_nicolson.cpp  crank_nicolson.hpp  implicit_euler.cpp  implicit_euler.hpp  time_scheme_interface.hpp
src/core/solver/: conjugate_gradient_solver.cpp  conjugate_gradient_solver.hpp  jacobi_solver.cpp  jacobi_solver.hpp  solver_interface.hpp  sor_solver.cpp  sor_solver.hpp
src/io/: CMakeLists.txt  param_reader.cpp  param_reader.hpp  solution_exporter.cpp  solution_exporter.hpp
src/mesh/: CMakeLists.txt  README.md  coordinate_system.cpp  coordinate_system.hpp  domain_decomposition.cpp  domain_decomposition.hpp  mesh2d.cpp  mesh2d.hpp
src/mpi/: CMakeLists.txt  cartesian_topology.cpp  cartesian_topology.hpp  ghost_cell_exchange.cpp  ghost_cell_exchange.hpp  mpi_context.cpp  mpi_context.hpp  profiler.cpp  profiler.hpp  reduction_ops.cpp  reduction_ops.hpp
src/utils/: CMakeLists.txt  README.md  array2d.hpp  logger.cpp  logger.hpp  logger_test  logger_test.cpp  timer.hpp  timer_example.cpp
test_cartesian_topology_simple.dSYM/Contents/: Info.plist
test_cartesian_topology_simple.dSYM/Contents/Resources/DWARF/: test_cartesian_topology_simple
test_cartesian_topology_simple.dSYM/Contents/Resources/Relocations/aarch64/: test_cartesian_topology_simple.yml
tests/: CMakeLists.txt  README.md  test_common.hpp  test_domain_decomposition.cpp
tests/performance/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  benchmark_communication.cpp  benchmark_mpi_communication.cpp  benchmark_overlap.cpp  benchmark_scaling.cpp
tests/unit/: CMakeLists.txt  test_array2d.cpp  test_cartesian_topology.cpp  test_cg_solver.cpp  test_ghost_cell_exchange.cpp  test_jacobi_solver.cpp  test_mesh2d.cpp  test_mpi_context.cpp  test_reduction_ops.cpp  test_sor_solver.cpp
visualization/: README.md  requirements.txt  run_and_visualize.py
visualization/config/: presets.yaml
visualization/core/: __init__.py  output_monitor.py  solution_reader.py  solver_runner.py
visualization/output/: large_final.txt  large_initial.txt  large_step000100.txt  large_step000200.txt  large_step000300.txt  large_step000400.txt  large_step000500.txt  large_step000600.txt  large_step000700.txt  large_step000800.txt  large_step000900.txt  large_step001000.txt  large_step001100.txt  large_step001200.txt  large_step001300.txt  large_step001400.txt  large_step001500.txt  large_step001600.txt  large_step001700.txt  large_step001800.txt  large_step001900.txt  large_step002000.txt  small_final.txt  small_initial.txt  small_step000100.txt
visualization/renderers/: __init__.py  animation.py  heatmap.py
visualization/test_data/: test_output.txt
